トップ画面とLesson1の画面のレイアウトを修正

--- a/DevIOAutoLayout/Base.lproj/Main.storyboard
+++ b/DevIOAutoLayout/Base.lproj/Main.storyboard
@@ -9,12 +9,12 @@
         <scene sceneID="UD4-Bs-Qar">
             <objects>
                 <tableViewController id="LBg-VL-8bl" customClass="RootViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="EvP-Rr-uFD">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="EvP-Rr-uFD">
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="EPY-5S-BZ8" style="IBUITableViewCellStyleDefault" id="tFE-nG-J0u">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" textLabel="EPY-5S-BZ8" style="IBUITableViewCellStyleDefault" id="tFE-nG-J0u">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tFE-nG-J0u" id="xNd-aq-PYO">
                                     <autoresizingMask key="autoresizingMask"/>
