--- a/DevIOAutoLayout/Lesson1Answer.storyboard
+++ b/DevIOAutoLayout/Lesson1Answer.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6751"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Lesson1Answer-->
@@ -13,7 +12,7 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="mLL-gJ-YKr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="206" id="m0d-ak-lc9" customClass="Lesson1AnswerCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
@@ -49,16 +48,22 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="M4f-Yf-fmx" firstAttribute="top" secondItem="d3P-M7-ByW" secondAttribute="topMargin" constant="8" id="3vR-oU-qY1"/>
+                                        <constraint firstItem="M4f-Yf-fmx" firstAttribute="leading" secondItem="d3P-M7-ByW" secondAttribute="leading" constant="16" id="5ig-v0-P1K"/>
                                         <constraint firstAttribute="trailing" secondItem="d0C-pM-Eda" secondAttribute="trailing" constant="16" id="93V-K9-4PO"/>
                                         <constraint firstItem="d0C-pM-Eda" firstAttribute="top" secondItem="Vr3-D7-Xrf" secondAttribute="bottom" constant="16" id="A0N-tJ-Xkc"/>
                                         <constraint firstAttribute="bottom" secondItem="d0C-pM-Eda" secondAttribute="bottom" constant="16" id="EBr-aX-OpL"/>
                                         <constraint firstItem="d0C-pM-Eda" firstAttribute="leading" secondItem="d3P-M7-ByW" secondAttribute="leading" constant="16" id="F6D-TZ-t5f"/>
                                         <constraint firstItem="Vr3-D7-Xrf" firstAttribute="leading" secondItem="M4f-Yf-fmx" secondAttribute="trailing" constant="16" id="UPj-WA-6xf"/>
-                                        <constraint firstItem="M4f-Yf-fmx" firstAttribute="leading" secondItem="d3P-M7-ByW" secondAttribute="leadingMargin" constant="8" id="aVL-z7-iss"/>
+                                        <constraint firstItem="d0C-pM-Eda" firstAttribute="top" secondItem="M4f-Yf-fmx" secondAttribute="bottom" constant="16" id="ZKk-Sf-21B"/>
                                         <constraint firstItem="Vr3-D7-Xrf" firstAttribute="centerY" secondItem="M4f-Yf-fmx" secondAttribute="centerY" id="bhZ-hr-NOG"/>
+                                        <constraint firstItem="M4f-Yf-fmx" firstAttribute="top" secondItem="d3P-M7-ByW" secondAttribute="top" constant="16" id="tVA-sg-LNt"/>
                                         <constraint firstAttribute="trailing" secondItem="Vr3-D7-Xrf" secondAttribute="trailing" constant="16" id="wSA-bc-aJj"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="A0N-tJ-Xkc"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
