--- a/DevIOAutoLayout/Lesson3.storyboard
+++ b/DevIOAutoLayout/Lesson3.storyboard
@@ -23,7 +23,7 @@
                                     <segue destination="5y5-I7-Gzc" kind="embed" id="buw-Pd-1jK"/>
                                 </connections>
                             </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dLU-SI-DIj">
+                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dLU-SI-DIj">
                                 <rect key="frame" x="320" y="64" width="280" height="536"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="280" id="kNE-0v-NbB"/>
@@ -47,8 +47,8 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="knV-tU-3Hy"/>
                                 <exclude reference="VvE-Bg-C8K"/>
+                                <exclude reference="knV-tU-3Hy"/>
                             </mask>
                         </variation>
                     </view>
@@ -60,6 +60,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="menuView" destination="dLU-SI-DIj" id="wkD-5r-18c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5r9-OL-uSV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
