--- a/DevIOAutoLayout/Lesson2.storyboard
+++ b/DevIOAutoLayout/Lesson2.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bLY-Sj-6cg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bLY-Sj-6cg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
@@ -17,17 +17,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lesson2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioS-KU-fFq">
-                                <rect key="frame" x="268" y="289" width="65" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jLn-tq-FgT">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vFk-wC-aMA" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lesson2_photo" translatesAutoresizingMaskIntoConstraints="NO" id="EOY-cf-wpq">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="bPp-ZC-xBp"/>
+                                                </constraints>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8x-6y-tcR" userLabel="Sub View">
+                                                <rect key="frame" x="0.0" y="300" width="600" height="900"/>
+                                                <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="900" id="M6M-3X-mJn"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="Z8x-6y-tcR" firstAttribute="top" secondItem="EOY-cf-wpq" secondAttribute="bottom" id="17Y-nV-7dn"/>
+                                            <constraint firstItem="Z8x-6y-tcR" firstAttribute="leading" secondItem="vFk-wC-aMA" secondAttribute="leading" id="1kU-pO-vgr"/>
+                                            <constraint firstAttribute="trailing" secondItem="EOY-cf-wpq" secondAttribute="trailing" id="MlV-T3-xl1"/>
+                                            <constraint firstItem="EOY-cf-wpq" firstAttribute="leading" secondItem="vFk-wC-aMA" secondAttribute="leading" id="Z6G-72-J3c"/>
+                                            <constraint firstAttribute="trailing" secondItem="Z8x-6y-tcR" secondAttribute="trailing" id="g6a-V7-9wv"/>
+                                            <constraint firstAttribute="bottom" secondItem="Z8x-6y-tcR" secondAttribute="bottom" id="mmG-2j-l52"/>
+                                            <constraint firstItem="EOY-cf-wpq" firstAttribute="top" secondItem="vFk-wC-aMA" secondAttribute="top" id="rU8-vx-mPT"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="vFk-wC-aMA" firstAttribute="top" secondItem="jLn-tq-FgT" secondAttribute="top" id="1l7-nf-jgl"/>
+                                    <constraint firstItem="vFk-wC-aMA" firstAttribute="leading" secondItem="jLn-tq-FgT" secondAttribute="leading" id="Eym-An-Osd"/>
+                                    <constraint firstAttribute="trailing" secondItem="vFk-wC-aMA" secondAttribute="trailing" id="Ljm-HZ-MZs"/>
+                                    <constraint firstAttribute="bottom" secondItem="vFk-wC-aMA" secondAttribute="bottom" id="S84-Ek-7Od"/>
+                                    <constraint firstAttribute="centerX" secondItem="vFk-wC-aMA" secondAttribute="centerX" id="e2Z-Bo-QjX"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="ioS-KU-fFq" secondAttribute="centerY" id="HYB-Lp-2Wx"/>
-                            <constraint firstAttribute="centerX" secondItem="ioS-KU-fFq" secondAttribute="centerX" id="Ryi-26-rVG"/>
+                            <constraint firstAttribute="trailing" secondItem="jLn-tq-FgT" secondAttribute="trailing" id="3NX-Bs-bUb"/>
+                            <constraint firstItem="jLn-tq-FgT" firstAttribute="leading" secondItem="CdG-53-f0Q" secondAttribute="leading" id="Cml-fk-sNd"/>
+                            <constraint firstItem="jLn-tq-FgT" firstAttribute="top" secondItem="CdG-53-f0Q" secondAttribute="top" id="Ejm-Px-1Ub"/>
+                            <constraint firstItem="db8-Hp-d9T" firstAttribute="top" secondItem="jLn-tq-FgT" secondAttribute="bottom" id="b8W-mS-6Ig"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -36,4 +72,7 @@
             <point key="canvasLocation" x="347" y="537"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="lesson2_photo" width="1600" height="1066"/>
+    </resources>
 </document>
