--- a/DevIOAutoLayout/Lesson2Answer.storyboard
+++ b/DevIOAutoLayout/Lesson2Answer.storyboard
@@ -1,39 +1,84 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kgi-ZT-xOw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wYc-RX-QC2">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--Lesson2Answer-->
-        <scene sceneID="zvO-xI-mhd">
+        <scene sceneID="Mn0-da-3aN">
             <objects>
-                <viewController title="Lesson2Answer" id="kgi-ZT-xOw" customClass="Lesson2AnswerViewController" sceneMemberID="viewController">
+                <viewController title="Lesson2" id="wYc-RX-QC2" userLabel="Lesson2Answer" customClass="Lesson2AnswerViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jXe-nn-jFd"/>
-                        <viewControllerLayoutGuide type="bottom" id="cTs-i7-Nsa"/>
+                        <viewControllerLayoutGuide type="top" id="D45-dZ-3Tq"/>
+                        <viewControllerLayoutGuide type="bottom" id="FiQ-87-KMH"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="g84-9m-dHP">
+                    <view key="view" contentMode="scaleToFill" id="tjK-tH-1TF">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lesson2 Answer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0xF-xa-Mfd">
-                                <rect key="frame" x="237" y="289" width="127" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="egO-YG-hvE">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="85C-x7-X2C" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lesson2_photo" translatesAutoresizingMaskIntoConstraints="NO" id="1Bv-PS-Pkx">
+                                                <rect key="frame" x="0.0" y="-766" width="600" height="1066"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="250" id="PvX-VU-pCH"/>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="PvX-VU-pCH"/>
+                                                    </mask>
+                                                </variation>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UHM-Pc-Yqa" userLabel="Sub View">
+                                                <rect key="frame" x="0.0" y="300" width="600" height="900"/>
+                                                <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="900" id="gQ1-cM-Z0Q"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="UHM-Pc-Yqa" firstAttribute="top" secondItem="1Bv-PS-Pkx" secondAttribute="bottom" id="KHP-EE-M9U"/>
+                                            <constraint firstAttribute="bottom" secondItem="UHM-Pc-Yqa" secondAttribute="bottom" id="Uoi-wy-qIR"/>
+                                            <constraint firstAttribute="trailing" secondItem="UHM-Pc-Yqa" secondAttribute="trailing" id="Xqh-8E-EH0"/>
+                                            <constraint firstItem="1Bv-PS-Pkx" firstAttribute="leading" secondItem="85C-x7-X2C" secondAttribute="leading" id="oqq-bk-Z4r"/>
+                                            <constraint firstItem="UHM-Pc-Yqa" firstAttribute="leading" secondItem="85C-x7-X2C" secondAttribute="leading" id="uk1-uh-uLm"/>
+                                            <constraint firstItem="UHM-Pc-Yqa" firstAttribute="top" secondItem="85C-x7-X2C" secondAttribute="top" constant="300" id="wbV-bC-3aT"/>
+                                            <constraint firstAttribute="trailing" secondItem="1Bv-PS-Pkx" secondAttribute="trailing" id="yh2-k3-L3N"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="85C-x7-X2C" secondAttribute="trailing" id="BQL-lr-4Ty"/>
+                                    <constraint firstItem="85C-x7-X2C" firstAttribute="top" secondItem="egO-YG-hvE" secondAttribute="top" id="KaN-UR-nwQ"/>
+                                    <constraint firstItem="85C-x7-X2C" firstAttribute="leading" secondItem="egO-YG-hvE" secondAttribute="leading" id="jBz-iu-yh3"/>
+                                    <constraint firstAttribute="centerX" secondItem="85C-x7-X2C" secondAttribute="centerX" id="oa6-Ip-0no"/>
+                                    <constraint firstAttribute="bottom" secondItem="85C-x7-X2C" secondAttribute="bottom" id="pNs-2V-dgu"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="0xF-xa-Mfd" secondAttribute="centerX" id="Lsl-et-PLa"/>
-                            <constraint firstAttribute="centerY" secondItem="0xF-xa-Mfd" secondAttribute="centerY" id="fvR-pP-Joa"/>
+                            <constraint firstAttribute="trailing" secondItem="egO-YG-hvE" secondAttribute="trailing" id="7Ao-IR-o2M"/>
+                            <constraint firstItem="egO-YG-hvE" firstAttribute="top" secondItem="tjK-tH-1TF" secondAttribute="top" id="HNs-vK-FC0"/>
+                            <constraint firstItem="FiQ-87-KMH" firstAttribute="top" secondItem="egO-YG-hvE" secondAttribute="bottom" id="YQ6-gm-VWf"/>
+                            <constraint firstItem="1Bv-PS-Pkx" firstAttribute="top" secondItem="D45-dZ-3Tq" secondAttribute="bottom" priority="750" id="lCA-KZ-Uoj"/>
+                            <constraint firstItem="egO-YG-hvE" firstAttribute="leading" secondItem="tjK-tH-1TF" secondAttribute="leading" id="uVq-Ev-hoY"/>
                         </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Bst-FM-dbx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YCl-lL-lFO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="347" y="537"/>
+            <point key="canvasLocation" x="347" y="-145"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="lesson2_photo" width="1600" height="1066"/>
+    </resources>
 </document>
