--- a/DevIOAutoLayout/Lesson2Answer.storyboard
+++ b/DevIOAutoLayout/Lesson2Answer.storyboard
@@ -31,7 +31,7 @@
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UHM-Pc-Yqa" userLabel="Sub View">
                                                 <rect key="frame" x="0.0" y="300" width="600" height="900"/>
-                                                <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="900" id="gQ1-cM-Z0Q"/>
                                                 </constraints>
